--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,5 +5,6 @@ encoding//src/main/webapp/WEB-INF/views/house/detail_form.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/house/list_form.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/house/update_house_form.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/user/history_form.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/user/wish_list_form.jsp=UTF-8
 encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
